src/styles/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    /* slate-900  */
    --text-primary: #0f172a;
    /* slate-800 */
    --text-secondary: #1e293b;
    /* cyan-300 */
    --text-blue: #67e8f9;
    /* white */
    --text-white: #ffffff;

    /* white */
    --bg-primary: #fff;
    /* gray-100 */
    --bg-secondary: #f3f4f6;
    /* green-500 */
    --bg-online: #22c55e;

    /* slate-700 */
    --bg-btn: #334155;
    /* slate-800 */
    --bg-btn-hover: #1e293b;
    /* slate-200 */
    --bg-btn-ghost: #e2e8f0;

    /* lime-100 */
    --bg-msg-current: #ecfccb;
    /* gray-100 */
    --bg-msg-other: #f3f4f6;
  }

  .dark {
    /* slate-200 */
    --text-primary: #e2e8f0;
    /* slate-300 */
    --text-secondary: #cbd5e1;

    /* slate-700 */
    --bg-primary: #334155;
    /* gray-800 */
    --bg-secondary: #1f2937;

    /* slate-200 */
    --bg-btn: #e2e8f0;
    /* slate-100 */
    --bg-btn-hover: #f1f5f9;
    /* slate-700 */
    --bg-btn-ghost: #334155;

    /* sky-600 */
    --bg-msg-current: #0284c7;
    /* slate-700 */
    --bg-msg-other: #334155;
  }

  * {
    -webkit-tap-highlight-color: transparent;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }
  *:focus {
    outline: none !important;
  }

  input::-webkit-outer-spin-button,
  input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  /* Firefox */
  input[type="number"] {
    -moz-appearance: textfield;
  }

  #root {
    height: 100vh;
    overflow: hidden;
  }
}

@layer components {
  .custom-scrollbar {
    @apply scrollbar scrollbar-w-1 scrollbar-track-transparent scrollbar-thumb-slate-500 scrollbar-thumb-rounded-full;
  }
  .sidebar-icon-button {
    @apply !text-2xl md:!text-3xl w-9 h-9 md:!w-12 md:!h-12;
  }
}
.filepond--credits {
  display: none;
}

